# sysguard

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  policy.yaml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: linux-prereqs.md  macos-fallback.md
examples/: alert-only-policy.yaml  block-https-for-user.yaml
scripts/: build-release.sh  check.sh  demo-alert.sh  demo-block.sh  doctor.sh  linux-enforce-test.sh  linux-smoke-test.sh  linux-vm-setup.sh  macos-setup.sh  run.sh
sysguard/: Cargo.toml
sysguard-common/: Cargo.toml
sysguard-common/src/: lib.rs
sysguard-ebpf/: Cargo.toml
sysguard-ebpf/src/: main.rs
sysguard/src/: dedup.rs  enforce.rs  main.rs  policy.rs
xtask/src/: main.rs
