[package]
name = "sysguard"
version = "0.1.0"
edition = "2021"

[dependencies]
sysguard-common = { path = "../sysguard-common" }
tokio = { version = "1.32", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
ctrlc = "3.2"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13.1", features = ["async_tokio"] }
